WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82398
Fix race condition when initializing the scrolling thread
https://bugs.webkit.org/show_bug.cgi?id=82398
Summary
Fix race condition when initializing the scrolling thread
Anders Carlsson
Reported
2012-03-27 16:57:30 PDT
Fix race condition when initializing the scrolling thread
Attachments
Patch
(1.76 KB, patch)
2012-03-27 17:14 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-27 17:14:45 PDT
Created
attachment 134176
[details]
Patch
Anders Carlsson
Comment 2
2012-03-27 17:21:56 PDT
Committed
r112340
: <
http://trac.webkit.org/changeset/112340
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug