Fix race condition when initializing the scrolling thread https://bugs.webkit.org/show_bug.cgi?id=82398 <rdar://problem/11002166>

Reviewed by Sam Weinig.

Lock m_initializeRunLoopConditionMutex when assigning m_threadIdentifier since we're
asserting that it's not null in the scrolling thread.

* page/scrolling/ScrollingThread.cpp:
(WebCore::ScrollingThread::createThreadIfNeeded):

Canonical link: https://commits.webkit.org/99762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112340 268f45cc-cd09-0410-ab3c-d52691b4dbfc